manifests/wallet/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wallet
spec:
  rules:
  - host: wallet.example.com
    http:
      paths:
      - backend:
          serviceName: wallet
          servicePort: http
